src/styles/global.css
@tailwind base;
@tailwind components;
@tailwind utilities;


@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap');
html {
  scroll-behavior: smooth;
}




body {
  font-family: 'Montserrat', sans-serif;
  max-width: 1024px;
  margin:auto;
  background-color: black;
}

h1, h2, h3, h4, h5, h6 {
  font-family: 'the-seasons', sans-serif;
}


.hero {
  position: relative;
  width: 100%;
  background-position: 50%;
  background-size: cover;
  background-image: url('../images/hero.jpg');
}

@media screen and (min-width: 1024px) {
  .hero {
    position: relative;
    width: 100%;
    background-position: 0%;
  }
}

@layer base {
  @font-face {
    font-family: 'the-seasons';
    font-weight: bold;
    src: url("../assets/fonts/theseasons-bd.otf") format("truetype");
  }
  @font-face {
    font-family: 'the-seasons';
    font-weight: normal;
    src: url("../assets/fonts/theseasons-reg.otf") format("truetype");
  }
  @font-face {
    font-family: 'the-seasons';
    font-weight: light;
    src: url("../assets/fonts/theseasons-lt.otf") format("truetype");
  }
}

@layer components {
  .seasons {
    font-family: 'the-seasons', sans-serif;
  }
  .font-times {
    font-family: 'Times New Roman', sans-serif;
  }
  .font-montserrat {
    font-family: 'Montserrat', sans-serif;
  }

  #blog {
    @apply bg-white absolute inset-0;
  }
  
}

.container {
  max-width: 1024px;
  margin: auto;
}

.container h1, h2,h3,h4,h5,h6 {
  font-weight: bold;
  margin-top: 1rem;
  margin-bottom: .5rem;
  font-size: 1.2rem;
}

.container h1 {
  font-size: 2rem;
}

.container p {
  text-align: justify;
}

